# n8n

./: README-MACOS.md  app-store-metadata.md  build-native-n8n.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/macos/desktop/: .gitignore  README.md  package.json
apps/macos/desktop/src-tauri/: .gitignore  Cargo.toml  README.md  entitlements.plist  tauri.conf.json
apps/macos/desktop/src-tauri/icons/: README.md
apps/macos/desktop/src-tauri/src/: main.rs
macos-app/: package.json
macos-app/electron/: main.ts  tsconfig.json
mobile-workflow-app/: README.md  package.json  tsconfig.json
mobile-workflow-app/src/: App.tsx
mobile-workflow-app/src/context/: AIAgentContext.tsx  WorkflowContext.tsx
mobile-workflow-app/src/screens/: AIAgentsScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx  WorkflowEditorScreen.tsx  WorkflowListScreen.tsx
n8n-macos/: Package.swift
n8n-macos/n8n-macos/: AppDelegate.swift  ContentView.swift  Info.plist  MenuController.swift  N8NApp.swift  SettingsView.swift  SystemIntegration.swift  WebViewBridge.swift  WorkflowManager.swift  n8n_macos.entitlements
n8n-macos/n8n-macos.xcodeproj/: project.pbxproj
