[package]
name = "n8n-desktop"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["shell-open", "os-all", "http-all", "dialog-message"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "time"] }
portpicker = "0.1"
which = "6"
keyring = { version = "2", features = ["apple"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
base64 = "0.22"